--- a/bad-apple/Makefile
+++ b/bad-apple/Makefile
@@ -4,8 +4,13 @@ all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
 	bash main.sh
 
-clean:
-	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
+install:
+	mkdir -p /lib/modules/$(shell uname -r)/kernel/drivers/extra
+	cp crash.ko /lib/modules/$(shell uname -r)/kernel/drivers/extra/
+	depmod
 
 novid:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
+
+clean:
+	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
