--- a/rickroll/Makefile
+++ b/rickroll/Makefile
@@ -7,5 +7,10 @@ all:
 clean:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
 
+install:
+	mkdir -p /lib/modules/$(shell uname -r)/kernel/drivers/extra
+	cp rick.ko /lib/modules/$(shell uname -r)/kernel/drivers/extra/
+	depmod
+
 novid:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
